--- a/bml_project/pyproject.toml
+++ b/bml_project/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 django = "^4.2"
+factory-boy = "^3.3.0"
 
 [build-system]
 requires = ["poetry-core"]
